# writermd-book

./: .gitignore  Publish.py  README.md  pyproject.toml
dev/: resources.md
sample-wip/publish/review/: reviewer-questionnaire.md
src/writermd/: exceptions.py
src/writermd/cli/: app.py  creator.py
src/writermd/tui/: __init__.py
wip-templace/: writermd.yml
writermd/: README.md
writermd/src/writermd/: config.py
writermd/src/writermd/app/: __init__.py  operations.py  project.py  settings.py
writermd/src/writermd/cli/: config.py  creator.py  exporter.py
